Vector API progress